--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
             <p> How do you take your coffee?</p>
      </div>
         <div class="contact-methods">
-        <a href="https://www.facebook.com/ahsan.ansari.716970"><i class="fab fa-facebook-square"></i> Facebook</a>
-        <a href="https://github.com/ahsan131-hub"><i class="fab fa-github"></i> GitHub</a>
-        <a href="https://twitter.com/Ahsan03962509"><i class="fab fa-twitter"></i> Twitter</a>
-        <a href="mailto: ahsanayan131@gmail.com"><i class="fas fa-at"></i> Send a mail</a>
-        <a href="tel:03128137265"><i class="fas fa-mobile-alt"></i> Call Me</a>
+        <a href="https://www.facebook.com/ahsan.ansari.716970" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a>
+        <a href="https://github.com/ahsan131-hub" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+        <a href="https://twitter.com/Ahsan03962509" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+        <a href="mailto: ahsanayan131@gmail.com" target="_blank"><i class="fas fa-at"></i> Send a mail</a>
+        <a href="tel:03128137265" ><i class="fas fa-mobile-alt"></i> Call Me</a>
         </div>
     </section>
     <footer>
