--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
     <section id="name-sec">
-        <h1>Hey I am Muhammad Ahsan</h1>
-        <p>a Computer science Student</p>
+        <h1>Hey, I am Muhammad Ahsan...</h1>
+        <p>a Computer Science student</p>
     </section>
 
 
@@ -48,7 +48,7 @@
                     <img src="huffman.jpg" alt="HuffMan">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span>
-                        HuffMan Encoder <br>(Data Structure)
+                        HuffMan Encoder <br>(Data Structures,java)
                         <span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
                     </a>
