--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
     <section id="project">
-        <h2>These are some of my Coures</h2>
+        <h2>These are some of my Projects</h2>
         <hr>
         <div class="container">
                
