Added Github certificate

--- a/index.html
+++ b/index.html
@@ -168,7 +168,15 @@
     </figcaption>
 </a>             
 </figure>   
-    
+<figure>
+    <a href="https://amigoscode.com/courses/1317178/certificate" target="_blank">
+    <img src="github-certificate.png" alt="certificate">
+    <figcaption>
+        <span class="code">&lt;	&nbsp;</span>
+        Git and GitHub<span class="code">	&nbsp;&#47;&gt;</span>
+    </figcaption>
+</a>             
+</figure>
 
       
     </section>
