--- a/index.html
+++ b/index.html
@@ -33,40 +33,7 @@
         <h2>These are some of my Projects</h2>
         <hr>
         <div class="container">
-            <!-- new from here 6 may 21 -->
 
-            <figure>
-                <a href="https://ahsan131-hub.github.io/CurrencyExchange/" target="_blank">
-                    <img src="currencyExcahnge.png" alt="currencyExcahnge">
-                    <figcaption>
-                        <span class="code">&lt;	&nbsp;</span> Currency Exchange (JavaScript+API)<span class="code">	&nbsp;&#47;&gt;</span>
-                    </figcaption>
-                </a>
-            </figure>
-
-
-
-            <figure>
-                <a href="https://ahsan131-hub.github.io/rockPapperScissor/" target="_blank">
-                    <img src="rockPaperScissor.png" alt="rockPapperScissor">
-                    <figcaption>
-                        <span class="code">&lt;	&nbsp;</span> Rock Paper Scissor (Javascript)<span class="code">	&nbsp;&#47;&gt;</span>
-                    </figcaption>
-                </a>
-            </figure>
-
-
-
-            <figure>
-                <a href="https://ahsan131-hub.github.io/booking-seat-cineama/" target="_blank">
-                    <img src="cinemaSeatBooking.png" alt="Cooking Seat Cineama">
-                    <figcaption>
-                        <span class="code">&lt;	&nbsp;</span> Cooking Seat Cineama (Javascript)<span class="code">	&nbsp;&#47;&gt;</span>
-                    </figcaption>
-                </a>
-            </figure>
-
-            <!-- end new 6 may 21 -->
 
             <figure>
                 <a href="https://github.com/ahsan131-hub/E-testing" target="_blank">
@@ -97,6 +64,42 @@
                     </figcaption>
                 </a>
             </figure>
+
+            <!-- new from here 6 may 21 -->
+
+            <figure>
+                <a href="https://ahsan131-hub.github.io/CurrencyExchange/" target="_blank">
+                    <img src="currencyExcahnge.png" alt="currencyExcahnge">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> Currency Exchange (JavaScript+API)<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+
+
+            <figure>
+                <a href="https://ahsan131-hub.github.io/rockPapperScissor/" target="_blank">
+                    <img src="rockPaperScissor.png" alt="rockPapperScissor">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> Rock Paper Scissor (Javascript)<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+
+
+            <figure>
+                <a href="https://ahsan131-hub.github.io/booking-seat-cineama/" target="_blank">
+                    <img src="cinemaSeatBooking.png" alt="Booking Seat Cineama">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> Cineama Seat Booking (Javascript)<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <!-- end new 6 may 21 -->
+
 
 
 
