fixed the hover button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
 
 
             <figure>
+                <a href="https://ahsan131-hub.github.io/myLandingPage/" target="_blank">
+                    <img src="myLandingPage.png" alt="currencyExcahnge">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> Landing Page (JavaScript+HTML +CSS)<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <figure>
+                <a href="https://ahsan131-hub.github.io/RandomUser/" target="_blank">
+                    <img src="RandomUser.png" alt="RandomUser">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> Random User(JavaScript+API)<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+
+
+
+            <figure>
                 <a href="https://ahsan131-hub.github.io/booking-seat-cineama/" target="_blank">
                     <img src="cinemaSeatBooking.png" alt="Booking Seat Cineama">
                     <figcaption>
