added 3 certificat and two more projects

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
         <hr>
         <div class="container">
 
+            <figure>
+                <a href="https://movie-app-131.netlify.app" target="_blank">
+                    <img src="./Movie-App.png" alt="React--Movie-App">
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Movie-App (REACT) <br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
 
             <figure>
                 <a href="https://github.com/ahsan131-hub/E-testing" target="_blank">
@@ -66,6 +75,15 @@
             </figure>
 
             <!-- new from here 6 may 21 -->
+
+            <figure>
+                <a href="https://sign-in-up-131.netlify.app" target="_blank">
+                    <img src="./React_SignIn.png" alt="React Login Page">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> React Login Page (REACT)<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
 
             <figure>
                 <a href="https://ahsan131-hub.github.io/CurrencyExchange/" target="_blank">
@@ -148,6 +166,25 @@
         <div class="container">
 
             <figure>
+                <a href="https://courses.edx.org/certificates/d5d873fd6acf42c796cf0980af0635da" target="_blank">
+                    <img src="./nodejsReactcertificate.png" alt="certificate">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> Cloud Applications with Node.js and React <span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <figure>
+                <a href="https://courses.edx.org/certificates/671feb72eda04f369d5e903d2901f270" target="_blank">
+                    <img src="cloudReact.png" alt="certificate">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span> Cloud Development with HTML, CSS, and JavaScript <span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+
+            <figure>
                 <a href="https://courses.edx.org/certificates/f315c7df0fb5404c90c27a69f3505983" target="_blank">
                     <img src="cs50.jpg" alt="certificate">
                     <figcaption>
@@ -163,7 +200,13 @@
                     </figcaption>
                 </a>
             </figure>
+
+
+
             <!-- new certificate 6 May 21 -->
+
+
+
             <figure>
                 <a href="https://www.freecodecamp.org/certification/mahsan131/javascript-algorithms-and-data-structures" target="_blank">
                     <img src="javascriptFFC.png" alt="certificate">
