added download cv option

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#project">Work</a></li>
                 <li><a href="#courses">Certificates</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="NEW_MuhammadAhsan_CV.pdf" download>Download CV</a></li>
 
             </ul>
         </nav>
