added two more projects

--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
             </figure>
 
             <figure>
+                <a href="https://todo-mern-131.netlify.app/" target="_blank">
+                    <img src="./TODO-MERN.png" alt="TODO-MERN">
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Todo Application (MERN) <br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <figure>
+                <a href="https://signin-131.netlify.app/#" target="_blank">
+                    <img src="./SIGN_IN_DJANGO.png" alt="Log IN /Log Out ">
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Log IN/Log Out(Django and React) <br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <figure>
                 <a href="https://github.com/ahsan131-hub/E-testing" target="_blank">
                     <img src="e-test.jpg" alt="E-testing service">
                     <figcaption>
