--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <a href="https://github.com/ahsan131-hub" target="_blank"><i class="fab fa-github"></i> GitHub</a>
             <a href="https://twitter.com/Ahsan03962509" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
             <a href="mailto: ahsanayan131@gmail.com" target="_blank"><i class="fas fa-at"></i> Send a mail</a>
-            <a href="tel:03128137265"><i class="fas fa-mobile-alt"></i> Call Me</a>
+            <a href="tel:+923128137265"><i class="fas fa-mobile-alt"></i> Call Me</a>
         </div>
     </section>
     <footer>
