updated work experience

--- a/index.html
+++ b/index.html
@@ -26,9 +26,56 @@
 
     <section id="name-sec">
         <h1>Hey, I am Muhammad Ahsan...</h1>
-        <p>a Computer Science student</p>
+        <p>a Backend Developer</p>
     </section>
 
+    <section id="project">
+        <h2>Work Experience</h2>
+        <hr>
+        <div class="container">
+            <figure>
+                <a href="https://secomind.ai/" target="_blank">
+                    <h3 class="work-heading">Backend Developer</h3>
+                    <ul class="work-des">
+                        <li>Developed the backend of all the features.</li>
+                        <li>Building reusable components and integrating with frontend(NextJS,ReactJs).</li>
+                        <li>User Authentication using Oauth using JWT/Cookie.</li>
+                        <li>Scheduling events using Google Calendar Apis and agendaJobs.</li>
+                        <li>Handling emails using SendGrid</li>
+                    </ul>
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Secomind.Ai: (Remote)<br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+            <figure>
+                <a href="https://www.swoopcart.com/" target="_blank">
+                    <h3 class="work-heading">Backend Developer</h3>
+                    <ul class="work-des">
+                        <li>Developed and
+                            maintained all the server-
+                            side network components
+                            along with ensuring
+                            optimal performance of
+                            the central database and
+                            responsiveness to front-
+                            end requests..</li>
+                        <li>Used firebase for OTP authentication push down notifications.</li>
+                        <li>Integrated JazzCash Api for payment transactions.</li>
+                        
+                        
+                    </ul>
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Swoop Cart Technologies: (Remote)<br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+        </div>
+        <!-- <button id="btn-show-all">Show All <i class="fas fa-chevron-right"></i></button> -->
+    </section>
 
     <section id="project">
         <h2>These are some of my Projects</h2>
@@ -177,7 +224,7 @@
             </figure>
 
         </div>
-        <button id="btn-show-all">Show All <i class="fas fa-chevron-right"></i></button>
+        <!-- <button id="btn-show-all">Show All <i class="fas fa-chevron-right"></i></button> -->
     </section>
 
     <section id="courses">
@@ -322,10 +369,6 @@
 
 
     </section>
-
-
-
-
 
     <section id="contact">
 
