--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="https://secomind.ai/" target="_blank">
                     <h3 class="work-heading">Backend Developer</h3>
                     <ul class="work-des">
-                        <li>Developed the backend of all the features.</li>
+                        <li>Developed the backend of all the features.Created robust, reusable, scable and high perfomance components for feature completion.</li>
                         <li>Building reusable components and integrating with frontend(NextJS,ReactJs).</li>
                         <li>User Authentication using Oauth using JWT/Cookie.</li>
                         <li>Scheduling events using Google Calendar Apis and agendaJobs.</li>
@@ -61,7 +61,8 @@
                             the central database and
                             responsiveness to front-
                             end requests..</li>
-                        <li>Used firebase for OTP authentication push down notifications.</li>
+                        <li>Ensured optimal performance of the central database</li>
+                        <li>Integrated firebase for OTP authentication push down notifications.</li>
                         <li>Integrated JazzCash Api for payment transactions.</li>
                         
                         
