--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="name-sec">
         <h1>Hey, I am Muhammad Ahsan...</h1>
-        <p>a Backend Developer</p>
+        <p>a Jr. Software Engineer</p>
     </section>
 
     <section id="project">
@@ -35,7 +35,7 @@
         <div class="container">
             <figure>
                 <a href="https://secomind.ai/" target="_blank">
-                    <h3 class="work-heading">Backend Developer</h3>
+                    <h3 class="work-heading">Jr. Software Engineer</h3>
                     <ul class="work-des">
                         <li>Developed the backend of all the features.</li>
                         <li>Building reusable components and integrating with frontend(NextJS,ReactJs).</li>
@@ -51,7 +51,7 @@
             </figure>
             <figure>
                 <a href="https://www.swoopcart.com/" target="_blank">
-                    <h3 class="work-heading">Backend Developer</h3>
+                    <h3 class="work-heading">Jr. Software Engineer</h3>
                     <ul class="work-des">
                         <li>Developed and
                             maintained all the server-
