--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="name-sec">
         <h1>Hey, I am Muhammad Ahsan...</h1>
-        <p>a Jr. Software Engineer</p>
+        <p>A Jr. Software Engineer</p>
     </section>
 
     <section id="project">
