--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#project">Work</a></li>
                 <li><a href="#courses">Certificates</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="NEW_MuhammadAhsan_CV.pdf" download>Download CV</a></li>
+                <li><a href="./resource/NEW_MuhammadAhsan_CV.pdf" download>Download CV</a></li>
 
             </ul>
         </nav>
@@ -25,8 +25,8 @@
 
 
     <section id="name-sec">
-        <h1>Hey, I am Muhammad Ahsan...</h1>
-        <p>A Jr. Software Engineer</p>
+        <h1>Muhammad Ahsan</h1>
+        <p>A Software Engineer...</p>
     </section>
 
     <section id="project">
@@ -35,7 +35,23 @@
         <div class="container">
             <figure>
                 <a href="https://secomind.ai/" target="_blank">
-                    <h3 class="work-heading">Jr. Software Engineer</h3>
+                    <h3 class="work-heading"> Software Engineer</h3>
+                    <ul class="work-des">
+                        <li>Developed the backend of all the features.</li>
+                        <li>Building reusable components and integrating with frontend(NextJS,ReactJs).</li>
+                        <li>User Authentication using Oauth using JWT/Cookie.</li>
+                        <li>Scheduling events using Google Calendar Apis and agendaJobs.</li>
+                        <li>Handling emails using SendGrid</li>
+                    </ul>
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Secomind.Ai: (Remote)<br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+            <figure>
+                <a href="https://secomind.ai/" target="_blank">
+                    <h3 class="work-heading"> Software Engineer</h3>
                     <ul class="work-des">
                         <li>Developed the backend of all the features.</li>
                         <li>Building reusable components and integrating with frontend(NextJS,ReactJs).</li>
@@ -51,7 +67,7 @@
             </figure>
             <figure>
                 <a href="https://www.swoopcart.com/" target="_blank">
-                    <h3 class="work-heading">Jr. Software Engineer</h3>
+                    <h3 class="work-heading"> Software Engineer</h3>
                     <ul class="work-des">
                         <li>Developed and
                             maintained all the server-
@@ -78,13 +94,44 @@
     </section>
 
     <section id="project">
-        <h2>These are some of my Projects</h2>
+        <h2>Projects</h2>
         <hr>
         <div class="container">
 
             <figure>
+                <a href="https://github.com/ahsan131-hub/metaroom-client" target="_blank">
+                    <img src="./resource/metaroom.png" alt="MetaRoom">
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>MetaRoom<br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <figure>
+                <a href="https://github.com/ahsan131-hub/Tweets-Sentimental-Analysis-System/tree/main" target="_blank">
+                    <img src="https://github.com/ahsan131-hub/Tweets-Sentimental-Analysis-System/blob/main/demo.gif" alt="Tweets-Sentimental-Analysis-System">
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Tweets-Sentimental-Analysis-System<br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <figure>
                 <a href="https://movie-app-131.netlify.app" target="_blank">
-                    <img src="./Movie-App.png" alt="React--Movie-App">
+                    <img src="./resource/Movie-App.png" alt="React--Movie-App">
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>Movie-App (REACT) <br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+
+            <figure>
+                <a href="https://movie-app-131.netlify.app" target="_blank">
+                    <img src="./resource/Movie-App.png" alt="React--Movie-App">
                     <figcaption>
                         <span class="code"> &lt;	&nbsp;</span>Movie-App (REACT) <br>
                         <span class="code"> 	&nbsp;&#47;&gt;</span>
@@ -94,7 +141,7 @@
 
             <figure>
                 <a href="https://todo-mern-131.netlify.app/" target="_blank">
-                    <img src="./TODO-MERN.png" alt="TODO-MERN">
+                    <img src="./resource/TODO-MERN.png" alt="TODO-MERN">
                     <figcaption>
                         <span class="code"> &lt;	&nbsp;</span>Todo Application (MERN) <br>
                         <span class="code"> 	&nbsp;&#47;&gt;</span>
@@ -104,7 +151,7 @@
 
             <figure>
                 <a href="https://signin-131.netlify.app/#" target="_blank">
-                    <img src="./SIGN_IN_DJANGO.png" alt="Log IN /Log Out ">
+                    <img src="./resource/SIGN_IN_DJANGO.png" alt="Log IN /Log Out ">
                     <figcaption>
                         <span class="code"> &lt;	&nbsp;</span>Log IN/Log Out(Django and React) <br>
                         <span class="code"> 	&nbsp;&#47;&gt;</span>
@@ -114,7 +161,7 @@
 
             <figure>
                 <a href="https://github.com/ahsan131-hub/E-testing" target="_blank">
-                    <img src="e-test.jpg" alt="E-testing service">
+                    <img src="./resource/e-test.jpg" alt="E-testing service">
                     <figcaption>
                         <span class="code"> &lt;	&nbsp;</span> Online Testing System<br>(Django, Javascript)
                         <span class="code"> 	&nbsp;&#47;&gt;</span>
@@ -124,7 +171,7 @@
 
             <figure>
                 <a href="https://github.com/ahsan131-hub/DataEncoder" target="_blank">
-                    <img src="huffman.jpg" alt="HuffMan">
+                    <img src="./resource/huffman.jpg" alt="HuffMan">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> HuffMan Encoder <br>(Data Structures,java)
                         <span class="code">	&nbsp;&#47;&gt;</span>
@@ -135,7 +182,7 @@
 
             <figure>
                 <a href="https://github.com/ahsan131-hub/TransportBussinessManagement/blob/main/README.md" target="_blank">
-                    <img src="TMS.jpg" alt="TransportBussinessManagement">
+                    <img src="./resource/TMS.jpg" alt="TransportBussinessManagement">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Transport Bussiness Management System (java)<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -146,7 +193,7 @@
 
             <figure>
                 <a href="https://sign-in-up-131.netlify.app" target="_blank">
-                    <img src="./React_SignIn.png" alt="React Login Page">
+                    <img src="./resource/React_SignIn.png" alt="React Login Page">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> React Login Page (REACT)<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -162,11 +209,9 @@
                 </a>
             </figure>
 
-
-
             <figure>
                 <a href="https://ahsan131-hub.github.io/rockPapperScissor/" target="_blank">
-                    <img src="rockPaperScissor.png" alt="rockPapperScissor">
+                    <img src="./resource/rockPaperScissor.png" alt="rockPapperScissor">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Rock Paper Scissor (Javascript)<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -177,7 +222,7 @@
 
             <figure>
                 <a href="https://ahsan131-hub.github.io/myLandingPage/" target="_blank">
-                    <img src="myLandingPage.png" alt="currencyExcahnge">
+                    <img src="./resource/myLandingPage.png" alt="currencyExcahnge">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Landing Page (JavaScript+HTML +CSS)<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -186,7 +231,7 @@
 
             <figure>
                 <a href="https://ahsan131-hub.github.io/RandomUser/" target="_blank">
-                    <img src="RandomUser.png" alt="RandomUser">
+                    <img src="./resource/RandomUser.png" alt="RandomUser">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Random User(JavaScript+API)<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -198,7 +243,7 @@
 
             <figure>
                 <a href="https://ahsan131-hub.github.io/booking-seat-cineama/" target="_blank">
-                    <img src="cinemaSeatBooking.png" alt="Booking Seat Cineama">
+                    <img src="./resource/cinemaSeatBooking.png" alt="Booking Seat Cineama">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Cineama Seat Booking (Javascript)<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -212,7 +257,7 @@
 
             <figure>
                 <a href="https://ahsan131-hub.github.io/tribute-page/index.html" target="_blank">
-                    <img src="tribute.jpg" alt="">
+                    <img src="./resource/tribute.jpg" alt="">
 
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Tribute Page<br>(HTML and CSS)
@@ -228,14 +273,24 @@
     </section>
 
     <section id="courses">
-        <h2>These are some courses completed by me </h2>
+        <h2>Certifications</h2>
         <hr>
 
         <div class="container">
 
             <figure>
+                <a href="https://coursera.org/share/2a7f96f157abd56100541f11f9d524d6" target="_blank">
+                    <img src="./resource/k8s.png" alt="certificate">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span>Introduction to Containers w/ Docker, Kubernetes
+                        & OpenShift<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+
+            <figure>
                 <a href="https://courses.edx.org/certificates/d5d873fd6acf42c796cf0980af0635da" target="_blank">
-                    <img src="./nodejsReactcertificate.png" alt="certificate">
+                    <img src="./resource/nodejsReactcertificate.png" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Cloud Applications with Node.js and React <span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -244,7 +299,7 @@
 
             <figure>
                 <a href="https://courses.edx.org/certificates/671feb72eda04f369d5e903d2901f270" target="_blank">
-                    <img src="cloudReact.png" alt="certificate">
+                    <img src="./resource/cloudReact.png" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Cloud Development with HTML, CSS, and JavaScript <span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -254,7 +309,7 @@
 
             <figure>
                 <a href="https://courses.edx.org/certificates/f315c7df0fb5404c90c27a69f3505983" target="_blank">
-                    <img src="cs50.jpg" alt="certificate">
+                    <img src="./resource/cs50.jpg" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> CS50W: CS50's Web Programming with Python and JavaScript <span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -262,7 +317,7 @@
             </figure>
             <figure>
                 <a href="    https://www.coursera.org/account/accomplishments/certificate/LBCYBVVF6DMH" target="_blank">
-                    <img src="djangoC.jpg" alt="certificate">
+                    <img src="./resource/djangoC.jpg" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Web Application Technologies and Django<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -277,7 +332,7 @@
 
             <figure>
                 <a href="https://www.freecodecamp.org/certification/mahsan131/javascript-algorithms-and-data-structures" target="_blank">
-                    <img src="javascriptFFC.png" alt="certificate">
+                    <img src="./resource/javascriptFFC.png" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> JavaScript Algorithms and Data Structures <span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -289,7 +344,7 @@
             <!-- end certificates -->
             <figure>
                 <a href="    https://www.coursera.org/account/accomplishments/certificate/J458UPRBRSD8" target="_blank">
-                    <img src="datas.jpg" alt="certificate">
+                    <img src="./resource/datas.jpg" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Data Structures<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -297,7 +352,7 @@
             </figure>
             <figure>
                 <a href="    https://www.coursera.org/account/accomplishments/certificate/9TADYE9VZ94C" target="_blank">
-                    <img src="programing everybody.jpg" alt="certificate">
+                    <img src="./resource/programing everybody.jpg" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Programming for Everybody (Getting Started with Python)<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -305,7 +360,7 @@
             </figure>
             <figure>
                 <a href="https://amigoscode.com/courses/1317178/certificate" target="_blank">
-                    <img src="github-certificate.png" alt="certificate">
+                    <img src="./resource/github-certificate.png" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Git and GitHub<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -313,7 +368,7 @@
             </figure>
             <figure>
                 <a href="#" target="_blank">
-                    <img src="dataCamp relational database.png" alt="certificate">
+                    <img src="./resource/dataCamp relational database.png" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Introduction to Relational Databases in SQL <span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -321,7 +376,7 @@
             </figure>
             <figure>
                 <a href="#" target="_blank">
-                    <img src="joingDatabase.png" alt="certificate">
+                    <img src="./resource/joingDatabase.png" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Introduction to SQL <span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -332,7 +387,7 @@
 
             <figure>
                 <a href="https://coursera.org/share/28ba74bd7d8016fb5b5e4865bf836211" target="_blank">
-                    <img src="operating.jpg" alt="certificate">
+                    <img src="./resource/operating.jpg" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Cybersecurity Roles, Processes & Operating System Security<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -340,7 +395,7 @@
             </figure>
             <figure>
                 <a href="    https://www.coursera.org/account/accomplishments/certificate/V242SA67YX7W" target="_blank">
-                    <img src="math.jpg" alt="">
+                    <img src="./resource/math.jpg" alt="">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Mathematical Thinking in Computer Science<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -349,7 +404,7 @@
 
             <figure>
                 <a href="    https://www.coursera.org/account/accomplishments/certificate/XBQ86GKSU55C" target="_blank">
-                    <img src="problemsolving.jpg" alt="certificate">
+                    <img src="./resource/problemsolving.jpg" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Java Programming: Solving Problems with Software<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -359,7 +414,7 @@
 
             <figure>
                 <a href="    https://www.coursera.org/account/accomplishments/certificate/WHVSP5KK7RHS" target="_blank">
-                    <img src="androif.jpg" alt="certificate">
+                    <img src="./resource/androif.jpg" alt="certificate">
                     <figcaption>
                         <span class="code">&lt;	&nbsp;</span> Java for Android<span class="code">	&nbsp;&#47;&gt;</span>
                     </figcaption>
@@ -371,7 +426,6 @@
     </section>
 
     <section id="contact">
-
         <div class="contact-header">
             <h2>Let's work together...</h2>
             <p> How do you take your coffee?</p>
