--- a/index.html
+++ b/index.html
@@ -34,24 +34,21 @@
         <hr>
         <div class="container">
             <figure>
-                <a href="https://secomind.ai/" target="_blank">
-                    <h3 class="work-heading"> Software Engineer</h3>
+                <a href="https://www.linkedin.com/company/cygnis-media-inc." target="_blank">
+                    <h3 class="work-heading">Full-Stack Engineer</h3>
                     <ul class="work-des">
-                        <li>Developed the backend of all the features.</li>
-                        <li>Building reusable components and integrating with frontend(NextJS,ReactJs).</li>
-                        <li>User Authentication using Oauth using JWT/Cookie.</li>
-                        <li>Scheduling events using Google Calendar Apis and agendaJobs.</li>
-                        <li>Handling emails using SendGrid</li>
+                        <li>Design and develop Express.js and Sequelize to create a scalable and efficient backend server.</li>
+                        <li>Utilizing Next.js and Tailwind CSS to create robust and responsive UI.</li>
                     </ul>
                     <figcaption>
-                        <span class="code"> &lt;	&nbsp;</span>Secomind.Ai: (Remote)<br>
+                        <span class="code"> &lt;	&nbsp;</span>Cygnis Media: (On-site)<br>
                         <span class="code"> 	&nbsp;&#47;&gt;</span>
                     </figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="https://secomind.ai/" target="_blank">
-                    <h3 class="work-heading"> Software Engineer</h3>
+                    <h3 class="work-heading">Backend Engineer</h3>
                     <ul class="work-des">
                         <li>Developed the backend of all the features.</li>
                         <li>Building reusable components and integrating with frontend(NextJS,ReactJs).</li>
@@ -67,7 +64,7 @@
             </figure>
             <figure>
                 <a href="https://www.swoopcart.com/" target="_blank">
-                    <h3 class="work-heading"> Software Engineer</h3>
+                    <h3 class="work-heading">Backend Engineer</h3>
                     <ul class="work-des">
                         <li>Developed and
                             maintained all the server-
