--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="name-sec">
         <h1>Muhammad Ahsan</h1>
-        <p>A Software Engineer...</p>
+        <p>Software Engineer...</p>
     </section>
 
     <section id="project">
