updated github profile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="name-sec">
         <h1>Muhammad Ahsan</h1>
-        <p>A Software Engineer...</p>
+        <p>2 years of extensive experience in building web application.</p>
     </section>
 
     <section id="project">
@@ -96,6 +96,15 @@
         <div class="container">
 
             <figure>
+                <a href="https://github.com/ahsan131-hub/bots-hub-frontend" target="_blank">
+                    <img src="./resource/coming-soon.jpg" alt="bots-hub">
+                    <figcaption>
+                        <span class="code"> &lt;	&nbsp;</span>AI-Driven Bots Hub<br>
+                        <span class="code"> 	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+            <figure>
                 <a href="https://github.com/ahsan131-hub/metaroom-client" target="_blank">
                     <img src="./resource/metaroom.png" alt="MetaRoom">
                     <figcaption>
@@ -107,7 +116,7 @@
 
             <figure>
                 <a href="https://github.com/ahsan131-hub/Tweets-Sentimental-Analysis-System/tree/main" target="_blank">
-                    <img src="https://github.com/ahsan131-hub/Tweets-Sentimental-Analysis-System/blob/main/demo.gif" alt="Tweets-Sentimental-Analysis-System">
+                    <img src="https://github.com/ahsan131-hub/Tweets-Sentimental-Analysis-System/blob/main/demo.gif?raw=true" alt="Tweets-Sentimental-Analysis-System">
                     <figcaption>
                         <span class="code"> &lt;	&nbsp;</span>Tweets-Sentimental-Analysis-System<br>
                         <span class="code"> 	&nbsp;&#47;&gt;</span>
@@ -115,16 +124,7 @@
                 </a>
             </figure>
 
-            <figure>
-                <a href="https://movie-app-131.netlify.app" target="_blank">
-                    <img src="./resource/Movie-App.png" alt="React--Movie-App">
-                    <figcaption>
-                        <span class="code"> &lt;	&nbsp;</span>Movie-App (REACT) <br>
-                        <span class="code"> 	&nbsp;&#47;&gt;</span>
-                    </figcaption>
-                </a>
-            </figure>
-
+            
 
             <figure>
                 <a href="https://movie-app-131.netlify.app" target="_blank">
@@ -275,6 +275,23 @@
 
         <div class="container">
 
+            <figure>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/7LQJCR83HGLQ" target="_blank">
+                    <img src="./resource/nn-deep-learning.png" alt="certificate">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span>Neural Networks and Deep Learning<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
+            <figure>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/BXS9BY944PJZ" target="_blank">
+                    <img src="./resource/supervised machine learning.png" alt="certificate">
+                    <figcaption>
+                        <span class="code">&lt;	&nbsp;</span>Supervised Machine Learning: Regression and
+                        Classification<span class="code">	&nbsp;&#47;&gt;</span>
+                    </figcaption>
+                </a>
+            </figure>
             <figure>
                 <a href="https://coursera.org/share/2a7f96f157abd56100541f11f9d524d6" target="_blank">
                     <img src="./resource/k8s.png" alt="certificate">
@@ -428,11 +445,11 @@
             <p> How do you take your coffee?</p>
         </div>
         <div class="contact-methods">
-            <a href="https://www.facebook.com/ahsan.ansari.716970" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a>
+            <!-- <a href="https://www.facebook.com/ahsan.ansari.716970" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a> -->
             <a href="https://github.com/ahsan131-hub" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-            <a href="https://twitter.com/Ahsan03962509" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="mailto: ahsanayan131@gmail.com" target="_blank"><i class="fas fa-at"></i> Send a mail</a>
-            <a href="tel:+923128137265"><i class="fas fa-mobile-alt"></i> Call Me</a>
+            <a href="https://www.linkedin.com/in/ahsan131/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="mailto: ahsanjsdev@gmail.com" target="_blank"><i class="fas fa-at"></i> Send a mail</a>
+            <a href="tel:+4915732468471"><i class="fas fa-mobile-alt"></i> Call Me</a>
         </div>
     </section>
     <footer>
