--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 
 <head>
     <title>Muhammad Ahsan</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <!-- Additional favicon formats for modern browsers -->
+    <link rel="icon" href="/favicon-16x16.png" type="image/png">
+    <!-- <link rel="icon" href="/favicon.svg" type="image/svg+xml"> -->
 
 </head>
 
