Fix typo in job title from "CivilPleet" to "Civil-Fleet"

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <!-- CivilPleet -->
           <div class="bg-white p-6 rounded-lg shadow-md card-hover">
             <h3 class="text-2xl font-bold text-gray-800 mb-4">
-              Software Engineer - CivilPleet
+              Software Engineer - Civil-Fleet
             </h3>
             <ul class="text-gray-600 space-y-2">
               <li>
