--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muhammad Ahsan - Full-Stack Engineer</title>
+    <title>Muhammad Ahsan - Software Engineer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -98,7 +98,7 @@
         Muhammad Ahsan
       </h1>
       <p class="text-xl md:text-2xl text-gray-600 mb-8">
-        Full-stack engineer with 4+ years of experience building scalable web
+        Software Engineer with 4+ years of experience building scalable web
         applications.
       </p>
       <div class="mt-8">
@@ -141,7 +141,7 @@
           <!-- Startrum -->
           <div class="bg-white p-6 rounded-lg shadow-md card-hover">
             <h3 class="text-2xl font-bold text-gray-800 mb-4">
-              Junior Full-Stack Engineer - Startrum
+              Junior Software Engineer - Startrum
             </h3>
             <ul class="text-gray-600 space-y-2">
               <li>
