Add AccessGo widget script to index.html for enhanced functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <script
+      src=" src=https://widget.accessgo.de/accessGoWidget.js"
+      type="module"
+    ></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
