Fix build issues and add Netlify config

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script
-      src=" src=https://widget.accessgo.de/accessGoWidget.js"
+      src="https://widget.accessgo.de/accessGoWidget.js"
       type="module"
     ></script>
     <script type="module" src="/src/main.tsx"></script>
