--- a/public/test-script.html
+++ b/public/test-script.html
@@ -51,6 +51,10 @@
           >&lt;script
           src="https://muhammad-ahsan.com/script.js"&gt;&lt;/script&gt;</code
         >
+        <p>
+          <strong>For local testing:</strong> Use
+          <code>&lt;script src="./script.js"&gt;&lt;/script&gt;</code>
+        </p>
       </div>
 
       <p>
@@ -81,6 +85,6 @@
     </div>
 
     <!-- Include your script -->
-    <script src="./script.js"></script>
+    <script src="https://muhammad-ahsan.com/script.js"></script>
   </body>
 </html>
