Comment out Google Tag Manager script in index.html and add DigiAccess script for enhanced functionality.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="/og-image.png" />
   </head>
   <!-- Google Tag Manager -->
-  <script>
+  <!-- <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || [];
       w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -20,7 +20,7 @@
       j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-KDHPV6BG");
-  </script>
+  </script> -->
   <!-- End Google Tag Manager -->
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -38,5 +38,10 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
 
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      id="dacs"
+      src="https://download.digiaccess.org/digiaccess"
+      defer
+    ></script>
   </body>
 </html>
