Update routing in App component to set Index as the default page, and add AccessGo widget script in index.html for enhanced functionality.

--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
 
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      type="module"
+      src="https://widget.accessgo.de/accessGoWidget.js"
+    ></script>
   </body>
 </html>
